feat: Initialize dashboard project with environment variables, API configuration, and Cloudflare Pages setup.

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "build:production": "vite build --mode production",
+    "preview": "vite preview",
+    "deploy:cloudflare": "pnpm run build:production && pnpm wrangler pages deploy dist",
+    "deploy:preview": "pnpm run build && pnpm wrangler pages deploy dist --branch=preview"
   },
   "dependencies": {
     "react": "^18.3.1",
